<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Mobile Base</string>
    <string name="app_name_order">LeadIn v2.0</string>
    <string name="app_name_collection">CollAct v2.0</string>
    <string name="app_name_survey">CheckId v2.0</string>
    <string name="app_desc_order">LeadIn Description</string>
    <string name="app_desc_collection">CollAct Description</string>
    <string name="app_desc_survey">CheckId Description</string>
    <string name="lblServerLinkId">Server Link</string>
    <string name="btnSaveLink">SAVE</string>
    <string name="lblLoginId">User ID</string>
    <string name="lblLoginPassword">Password</string>
    <string name="btnLogin">LOGIN</string>
    <string name="btnExit">EXIT</string>
    <string name="lblOldPassword">Old Password</string>
    <string name="lblCurrentPassword">Current Password</string>
    <string name="lblNewPassword">New Password</string>
    <string name="lblShowPassword">Show Password</string>
    <string name="lblConfirmPassword">Confirm Password</string>
    <string name="hintOldPassword">Enter your old password</string>
    <string name="hintNewPassword">Enter new password</string>
    <string name="hintConfirmPassword">Re-enter new password</string>
    <string name="hintRetypePassword">Retype Password</string>
    <string name="lblRememberMe">Remember Me</string>
    <string name="enableDevMode">ENABLE DEVELOPER MODE</string>
    <string name="disableDevMode">DISABLE DEVELOPER MODE</string>
    <string name="androidIdnotregistered">Register the following Android Id to Administrator</string>
    <string name="turn_on">Turn On</string>
    <string name="use_your_location">Need Your Location</string>
    <string name="location_explanation">Your background location is required by your supervisor for monitoring purpose</string>
    <string name="hintDigitalReceipt">Request to server for generate</string>
    <string name="btnDigitalReceipt">Generate Receipt</string>
    <string name="menuSurveyList">Task List</string>
    <string name="menuNewSurvey">New Task</string>
    <string name="menuSentSurvey">Log</string>
    <string name="mnChangePassword">CHANGE PASSWORD</string>
    <string name="mnPending">Pending</string>
    <string name="mnCpImage">Copy Image</string>
    <string name="menuInquiry">Inquiry</string>
    <string name="mnSync">Synchronize</string>
    <string name="mnAttendance">Attendance</string>
    <string name="msgNoSurvey">No task found from server</string>
    <string name="btnEdit">EDIT</string>
    <string name="btnSend">SEND</string>
    <string name="btnDelete">DELETE</string>
    <string name="msgAllDownloaded">All task downloaded successfully</string>
    <string name="msgSomeDownloaded">Some task failed to be downloaded</string>
    <string name="msgNoForm">No form template found from server</string>
    <string name="msgFormAllRelevant">Form template are all relevant questions</string>
    <string name="btnFinish">Finish</string>
    <string name="btnDate">SELECT THE DATE</string>
    <string name="btnTime">SELECT THE TIME</string>
    <string name="btnDateTime">SELECT THE DATE AND TIME</string>
    <string name="btnLookup">START SEARCH</string>
    <string name="btn_reset_password">RESET PASSWORD</string>
    <string name="promptSelectOne">select one</string>
    <string name="promptChooseOne">Choose One</string>
    <string name="lblFinish">Preview</string>
    <string name="lblHeader">Header</string>
    <string name="lblStatus">Status</string>
    <string name="lblStatusPrint">Status</string>
    <string name="mnSend">Send</string>
    <string name="alertExitSurvey">Are you sure you want to exit current task?</string>
    <string name="carModel">Car Model</string>
    <string name="btnGPS">SET THE LOCATION</string>
    <string name="btnGPSnLBS">set the location</string>
    <string name="time">Time Sent Data :\u0020</string>
    <string name="size">Data Size :\u0020</string>
    <string name="result">Return Message :\u0020</string>
    <string name="print">Print</string>
    <string name="printResultNull">There is No Print Result For This Task</string>
    <string name="theProspectID">Prospect ID :\u0020</string>
    <string name="infoDraw">Touch to draw / erase</string>
    <string name="mnPaint">Paint</string>
    <string name="mnErase">Erase</string>
    <string name="mnClear">Clear</string>
    <string name="mnSave">Save</string>
    <string name="lovCriteria">Search criteria</string>
    <string name="lovCriteriaEmpty">No search criteria found from server</string>
    <string name="lovHint">Search keyword</string>
    <string name="lovSearch">Search</string>
    <string name="lovEmpty">No result found</string>
    <string name="lblCustomerName">Customer Name</string>
    <string name="lblCustomerPhone">Customer Phone Number</string>
    <string name="lblCustomerAddress">Customer Address</string>
    <string name="lblNotes">Customer Notes</string>
    <string name="survey_location">Survey Location</string>
    <string name="survey_location_hint">Survey Location</string>
    <string name="btnStartSurvey">Start Survey</string>
    <string name="closedTaskMsg">This task has been closed</string>
    <string name="btnViewOnMap">View Location</string>
    <string name="btnEditSurvey">Edit</string>
    <string name="btnViewSurvey">View detail</string>
    <string name="msgNoSent">You have no sent task</string>
    <string name="msgNoVerification">You have no Verification task</string>
    <string name="msgNoApproval">You have no Approval task</string>
    <string name="msgNoPrintItem">No printing format found</string>
    <string name="connectFailed">Could not connect to the bluetooth printer</string>
    <string name="bt_off">Bluetooth is currenty turned off. Please turn on to continue print task</string>
    <string name="mnConnect">Connect</string>
    <string name="connected">Connected</string>
    <string name="mnPrint">Print</string>
    <string name="mnDisconnect">Disconnect</string>
    <string name="disconnected">Disconnected</string>
    <string name="not_connected">Not connected</string>
    <string name="btnSave">SAVE</string>
    <string name="btnCancel">CANCEL</string>
    <string name="btnBack">BACK</string>
    <string name="btnNext">NEXT</string>
    <string name="btnOk">OK</string>
    <string name="btnReset">RESET</string>
    <string name="btnStart">START</string>
    <string name="btnRevisit">REVISIT</string>
    <string name="btnView">VIEW</string>
    <string name="btnGone">GONE</string>
    <string name="btnPrint">PRINT</string>
    <string name="btnSearch">SEARCH</string>
    <string name="btnAdvancedSearch">Advanced Search</string>
    <string name="btnVerify">VERIFY</string>
    <string name="btnReject">REJECT</string>
    <string name="btnApprove">APPROVE</string>
    <string name="btnClose">CLOSE</string>
    <string name="btnSubmit">SUBMIT</string>
    <string name="btnChange">CHANGE</string>
    <string name="btnChangePlan">CHANGE PLAN</string>
    <string name="description">Description</string>
    <string name="license">License</string>
    <string name="checkUpdate">CHECK UPDATE</string>
    <string name="comment">Comment</string>
    <string name="title">Title</string>
    <string name="defaultTime">00:00</string>
    <string name="defaultDate">1 Jan 2015</string>
    <string name="defaultComment">0 comment</string>
    <string name="defaultYourName">Your name</string>
    <string name="msgErrMaps">Google Maps Error or Not Installed</string>
    <string name="msgInvalidChar">Invalid Character</string>
    <string name="msgRequired">is required</string>
    <string name="dropdownmsgRequired">Please choose option at </string>
    <string name="msgInvalid">is not valid</string>
    <string name="msgLoginFailed">Login failed</string>
    <string name="msgErrConcurrentSend">Data is being sent by background service</string>
    <string name="msgWrongOldPassword">Old password is wrong</string>
    <string name="msgWrongConfirmPassword">Confirm password doesn\'t match with new password</string>
    <string name="msgPasswordChanged">Your password has been changed</string>
    <string name="msgRelogin">Login Failed Please re-login</string>
    <string name="alertExit">Are you sure you want to exit?</string>
    <string name="alertUpdate">Newer build version found from server. Build:</string>
    <string name="progressWait">Please wait...</string>
    <string name="progressSave">Saving...</string>
    <string name="progressSend">Sending...</string>
    <string name="progressDelete">Deleting...</string>
    <string name="progressLocation">Retrieving location...</string>
    <string name="refresh">Refresh</string>
    <string name="capture">Capture</string>
    <string name="picSize">Picture size</string>
    <string name="requiredField">this field is required</string>
    <string name="notification">You have %1$d outstanding task</string>
    <string name="push_notification_info">You have a Notification</string>
    <string name="msgNoServerResponeString">Server not return valid result, please try again</string>
    <string name="msgStillUploading">Can\'t Exit Because Still Uploading Data</string>
    <string name="msgNoList">No List found</string>
    <string name="msgNoDetail">No Detail found</string>
    <string name="msgConnectionFailed">Fail to connect to server\nPlease try again</string>
    <string name="aboutTitle">About Application</string>
    <string name="aboutCopyright">Copyright \u00A9 (2015) AdIns</string>
    <string name="checkIn">Check in Location</string>
    <string name="msgUnavaibleLocation">Unable to get location</string>
    <string name="msgNoNewVersion">This current version is the latest version</string>
    <string name="enable_gps">Enable GPS</string>
    <string name="enable_gps_dialog">GPS provider not enabled. Would you like to enable it?</string>
    <string name="title_activity_synchronize">SynchronizeActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="version">Version</string>
    <string name="library_name">libraryname</string>
    <string name="library_creator">librarycreator</string>
    <string name="library_version">libraryversion</string>
    <string name="comment_item_name">Name</string>
    <string name="comment_item_date">Date</string>
    <string name="comment_hint">Write a comment...</string>
    <string name="msgUnavaibleLocationCheckIn">Unable get location to check in</string>
    <string name="msgUnavaibleLocationCheckOut">Unable get location to check out</string>
    <string name="msgUnavailableAddress">Unable to resolve address</string>
    <string name="action_search">Search</string>
    <string name="dummy_header_name_2">Adi Adicipta</string>
    <string name="dummy_task_id">10029</string>
    <string name="dummy_date">21-12-2012</string>
    <string name="dummy_status_task">Draft</string>
    <string name="dummy_scheme_name">Scheme Name</string>
    <string name="dummy_result">Data Berhasil Dikirim</string>
    <string name="dummy_time_sent">Time Sent Data : 05 Second</string>
    <string name="dummy_data_size">"Data Size : 231 Bytes</string>
    <string name="txt_language_setting">Language settings :</string>
    <string name="english_language">English</string>
    <string name="indonesian_language">Bahasa Indonesia</string>
    <string name="lblDevOption">Dev Options</string>
    <string name="appVer">Application\'s Version</string>
    <string name="androidVersion">Android Version</string>
    <string name="batteryPercen">Battery Percentage</string>
    <string name="appStorage">Application Storage Usage</string>
    <string name="dataUsage">Mobile Data Usage</string>
    <string name="deviceStorage">Device Storage Available</string>
    <string name="androidID">Android ID</string>
    <string name="changeLanguage">CHANGE LANGUAGE</string>
</resources>