<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/bgColor"
              android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/deviceInfoContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_margin="@dimen/card_margin"
        app:cardBackgroundColor="@color/fontColorWhite"
        app:cardCornerRadius="10dp"
        app:cardElevation="@dimen/card_shadow"
        app:contentPadding="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:id="@+id/txtAppVer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_mobile"
                android:drawablePadding="5dp"
                android:paddingBottom="5dp"
                android:text="@string/appVer"
                android:textAppearance="?android:attr/textAppearanceSmall"/>
            <TextView
                android:id="@+id/txtOsVer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_android"
                android:drawablePadding="5dp"
                android:paddingBottom="5dp"
                android:text="@string/androidVersion"
                android:textAppearance="?android:attr/textAppearanceSmall"/>
            <TextView
                android:id="@+id/txtBattery"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_battery"
                android:drawablePadding="5dp"
                android:paddingBottom="5dp"
                android:text="@string/batteryPercen"
                android:textAppearance="?android:attr/textAppearanceSmall"/>
            <TextView
                android:id="@+id/txtDataUsage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_app_storage"
                android:drawablePadding="5dp"
                android:paddingBottom="5dp"
                android:text="@string/appStorage"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:visibility="gone"/>
            <TextView
                android:id="@+id/txtMobileDataUsage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_data_usage_color"
                android:drawablePadding="5dp"
                android:paddingBottom="5dp"
                android:text="@string/dataUsage"
                android:textAppearance="?android:attr/textAppearanceSmall"/>
            <TextView
                android:id="@+id/txtMemoryAvailable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_storage"
                android:drawablePadding="5dp"
                android:paddingBottom="5dp"
                android:text="@string/deviceStorage"
                android:textAppearance="?android:attr/textAppearanceSmall"/>
            <TextView
                android:id="@+id/txtAndroidId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_android"
                android:drawablePadding="5dp"
                android:paddingBottom="5dp"
                android:text="@string/androidID"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:visibility="visible"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>