<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@drawable/bg_grayscale">
    <View
            android:id="@+id/actionbar"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_alignParentTop="true"
            android:background="@drawable/actionbar_background"/>
    <ScrollView android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp">
        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:orientation="vertical">
            <EditText android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:id="@+id/currentPassword"
                      android:hint="@string/lblCurrentPassword"
                      android:inputType="textPassword"/>
            <EditText android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:id="@+id/newPassword"
                      android:hint="@string/lblNewPassword"
                      android:layout_marginTop="12dp"
                      android:inputType="textPassword"/>
            <EditText android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:id="@+id/retypePassword"
                      android:hint="@string/hintRetypePassword"
                      android:layout_marginTop="12dp"
                      android:inputType="textPassword"/>
            <Button android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/mnChangePassword"
                    android:layout_marginTop="12dp"
                    android:id="@+id/changePassword">
            </Button>
        </LinearLayout>
    </ScrollView>
</LinearLayout>